--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -124,18 +124,18 @@
                 <div>
                     <strong>MyHordes</strong>
                     <div class="content">
-                        This is a fan project for the games <a href="http://dieverdammten.de">Die Verdammten</a>, <a href="http://die2nite.com/">Die2Nite</a>, <a href="http://hordes.fr/">Hordes</a> and <a href="http://www.zombinoia.com/">Zombinoia</a> by <b>MotionTwin</b>.
-                        Unless otherwise expressly stated, all graphics in MyHordes are taken from these games and are therefore the property of <b>MotionTwin</b>.
+                        {{ 'Dies ist ein Fan-Projekt für die Spiele {dv}, {d2n}, {hordes} und {zn} von <b>MotionTwin</b>.'|trans({'dv': '<a href="http://dieverdammten.de">Die Verdammten</a>', 'd2n': '<a href="http://die2nite.com/">Die2Nite</a>', 'hordes': '<a href="http://hordes.fr/">Hordes</a>', 'zn': '<a href="http://www.zombinoia.com/">Zombinoia</a>' },'global')|raw }}
+                        {{ 'All Grafiken stammen aus diesen Spielen, wenn nicht explizit anders angegeben, und sind damit Eigentum von <b>MotionTwin</b>'|trans({},'global') }}
                         <br /><br />
-                        MyHordes is <i>Open Source</i> and everyone is welcome to <b>get involved</b>. You can find the source code at <a href="https://gitlab.com/eternal-twin/myhordes">Gitlab</a>.
+                        {{ 'MyHordes ist <i>Open Source</i> und jeder ist zur <b>Mitwirkung</b> eingeladen. Du findest den Quellcode bei {gitlab}.'|trans({'gitlab': '<a href="https://gitlab.com/eternal-twin/myhordes">Gitlab</a>'},'global')|raw }}
                         <br /><br />
-                        MyHordes is part of the <a href="https://eternal-twin.net">Eternal-Twin</a> project, if you wish you can donate on the <a href="https://opencollective.com/eternal-twin">OpenCollective</a> page.
+                        {{ 'MyHordes ist ein Teil des {etwin} Projekts, du kannst uns auf {opencollective} mit einer Spende unterstützen.'|trans({'etwin': '<a href="https://eternal-twin.net">Eternal-Twin</a>', 'opencollective': '<a href="https://opencollective.com/eternal-twin">OpenCollective</a>'},'global')|raw }}
                     </div>
                 </div>
             </div>
             <div class="padded cell-small footer rw-7 rw-sm-24 center">
                 <div>
-                    <strong>{{ 'Programming'|trans({}, 'global') }}</strong>
+                    <strong>{{ 'Programmierung'|trans({}, 'global') }}</strong>
                     <div class="content">
                         {% for dev in devs %}
                             <div>{{ dev|raw }}</div>
@@ -145,7 +145,7 @@
             </div>
             <div class="padded cell-small footer rw-7 rw-sm-24 center">
                 <div>
-                    <strong>{{ 'Thanks to'|trans({}, 'global') }}</strong>
+                    <strong>{{ 'Danke an'|trans({}, 'global') }}</strong>
                     <div class="content">
                         {% for supporter in supporters %}
                             <i>{{ supporter }}</i>{% if not loop.last %},{% endif %}
