Added Halloween headers

--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -18,6 +18,10 @@ html.lang-base-en body.easter #wrapper > #header { background-image: url('../img
 html.lang-base-fr body.easter #wrapper > #header { background-image: url('../img/background/header_easter_fr.png'); }
 html.lang-base-es body.easter #wrapper > #header { background-image: url('../img/background/header_easter_es.png'); }
 
+html.lang-base-en body.halloween #wrapper > #header { background-image: url('../img/background/header_halloween_en.png'); }
+html.lang-base-fr body.halloween #wrapper > #header { background-image: url('../img/background/header_halloween_fr.png'); }
+html.lang-base-es body.halloween #wrapper > #header { background-image: url('../img/background/header_halloween_es.png'); }
+
 html.lang-base-en .words-of-heroes { background-image: url('../img/background/town/cityBoard_en.png'); }
 html.lang-base-fr .words-of-heroes { background-image: url('../img/background/town/cityBoard_fr.png'); }
 html.lang-base-es .words-of-heroes { background-image: url('../img/background/town/cityBoard_es.png'); }
