--- a/assets/less/modules/events.less
+++ b/assets/less/modules/events.less
@@ -75,3 +75,7 @@ body.stpatrick {
 body.easter {
     #wrapper>#header { background: url(../../img/background/header_easter_de.png); }
 }
+
+body.halloween {
+   #wrapper>#header { background: url(../../img/background/header_halloween_de.png); }
+}
