--- a/templates/ajax/soul/view_town.html.twig
+++ b/templates/ajax/soul/view_town.html.twig
@@ -6,10 +6,5 @@
         {% set return_path = path('soul_me') %}
     {% endif %}
 
-    <div class="row">
-        <div class="cell padded rw-4">
-            <button class='inline' x-ajax-href="{{return_path}}"><img src="{{asset('build/images/icons/small_back.gif')}}" alt ="" /> {{'Zurück'|trans({}, 'global')}}</button>
-        </div>
-    </div>
-    {% include 'ajax/soul/view_town_content.html.twig' with {'return_to': self_path} %}
+    {% include 'ajax/soul/view_town_content.html.twig' with {'return_to': self_path, 'base_path': return_path} %}
 {% endblock %}
