--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -99,7 +99,7 @@
                                     {% if town.open %}{% set found = true %}{% endif %}
                                 {% endfor %}
 
-                                <h5>{{ townClass.getLabel|trans({},'game') }}</h5>
+                                <h5>{{ townClass.getLabel|trans({},'game') }} {% if townClass.help %}{{ help_btn( townClass.help|trans({splimit: sp_limits[townClass.name] ?? 0},'game') ) }}{% endif %}</h5>
                                 {% if found %}
                                     <div class="row-table">
                                         <div class="row header">
