--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -398,23 +398,23 @@
                 </a>
             </div>
         </div>
-        <div class="note">
-        {% if decoItems|length == 0 %}
-                {{'Was soll denn das heißen, du hast noch keine Deko für dein bescheidenes Zuhause gefunden?! Worauf wartest du noch? In der Wüste findest du bestimmt ein wunderbares Sofa aus Zombiehaut! Oder darf es vielleicht eines dieser warmen, weichen Talismänner sein: Eine abgerissene Hand oder ein frisch abgetrennter Fuß?'|trans({}, 'game')}}
-        {% else %}
-            <ul class="list">
-                {% for item in decoItems %}
-                    <li>
-                        <img src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ ".gif") }}" alt="[]"/> {{ item.prototype.label|trans({}, 'items') }} {% if item.prototype.deco > 0 %}<em>(+{{ item.prototype.deco }} {{ 'Deko-Punkte'|trans({}, 'game') }})</em>{% endif %}<br />
-                        {% if item.prototype.decoText != '' %}
-                        <span class="small">{{ item.prototype.decoText|trans({}, 'items') }}</span>
-                        {% endif %}
-                        {% embed "ajax/game/item_tooltip.html.twig" with {"item": item} %}{% endembed %}
-                    </li>
-                {% endfor %}
-                <li class="separator">{{ 'Komiteenote:'|trans({}, 'game') }} <strong>{{ deco }}  {{ 'Punkt(e)'|trans({}, 'game') }}</strong> {{ help_btn(('Diese Note wird vom <strong>Komitee des guten Geschmacks der Stadt {townname}</strong> vergeben.'|trans({"{townname}": home.citizen.town.name}, 'game'))) }}</li>
-            </ul>
-        {% endif %}
+        <div class="lightbox">
+            {% if decoItems|length == 0 %}
+                    {{'Was soll denn das heißen, du hast noch keine Deko für dein bescheidenes Zuhause gefunden?! Worauf wartest du noch? In der Wüste findest du bestimmt ein wunderbares Sofa aus Zombiehaut! Oder darf es vielleicht eines dieser warmen, weichen Talismänner sein: Eine abgerissene Hand oder ein frisch abgetrennter Fuß?'|trans({}, 'game')}}
+            {% else %}
+                <ul class="list">
+                    {% for item in decoItems %}
+                        <li>
+                            <img src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ ".gif") }}" alt="[]"/> <b>{{ item.prototype.label|trans({}, 'items') }}</b> {% if item.prototype.deco > 0 %}<em class="small">(+{{ item.prototype.deco }} {{ 'Deko-Punkte'|trans({}, 'game') }})</em>{% endif %}<br />
+                            {% if item.prototype.decoText != '' %}
+                            <span class="small">{{ item.prototype.decoText|trans({}, 'items') }}</span>
+                            {% endif %}
+                            {% embed "ajax/game/item_tooltip.html.twig" with {"item": item} %}{% endembed %}
+                        </li>
+                    {% endfor %}
+                    <li class="separator">{{ 'Komiteenote:'|trans({}, 'game') }} <strong>{{ deco }}  {{ 'Punkt(e)'|trans({}, 'game') }}</strong> {{ help_btn(('Diese Note wird vom <strong>Komitee des guten Geschmacks der Stadt {townname}</strong> vergeben.'|trans({"{townname}": home.citizen.town.name}, 'game'))) }}</li>
+                </ul>
+            {% endif %}
         </div>
         {#
         <h5>{% trans from 'game' %}Verteidigung und Dekoration{% endtrans %}</h5>
