--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -755,7 +755,7 @@
                                             <li class="status">
                                                 <img src="{{ asset('build/images/status/status_terror.gif') }}" alt="{{ 'Angststarre'|trans({},'game') }}">
                                                 <div class="tooltip">
-{# TODO: Find the tooltip from DieVerdammten #}
+                                                    {{ 'Dieser Bürger scheint völlig verängstigt zu sein! Er bringt keinen Kontrollpunkt in dieser Zone.'|trans({},'game') }}
                                                 </div>
                                             </li>
                                         {% endif %}
